# camera-pico-ov7670

./: .gitignore  CMakeLists.txt  README.md  camera.c  camera.pio  format.c  ov7670.c  pc_viewer.py
example/: CMakeLists.txt  main.c  main.cpp
include/camera/: camera.h  format.h  ov7670.h
lib/pico-tflmicro/: CMakeLists.txt
model/: ml_model.cpp  ml_model.h  tflite_model.h
